kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  type: LoadBalancer
  selector:
    app: users-api
  ports:
  - name: http
    port: 8080
    targetPort: 8080
