kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-api
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users-api
            port:
              number: 8080
      - path: /api/users
        pathType: Exact
        backend:
          service:
            name: users-api
            port:
              number: 8080
